DR-2826 Bulk file ingest mode (#1409)
* Method to get a list of all parent dirs given a path

* Add bulk operations for inserting data into Firestore

* Make GCP file copy skip if target file already exists

* Make sure file id calculation works with null md5

* Add ability to create LoadHistoryIterator from list

(It's used to populate the load history table and we'll be storing that info in the flight map in bulk mode)

* Create a new base step which runs a full bulk ingest

I attempted to mimic what the flights do in order to minimize the amount of fragmentation from running scattered ingests and to reduce the chattiness with the DB in favor of large object storage in the stairway DB

* Make it so that the load history table can be loaded from bulk mode

* Make things less ingest-type specific

* Wire in bulk mode to ingest flights

* Add bulk mode options to API

* Add support for bulk loading when ingesting in array mode

* Add integration testing for the various ingest modes

* Spotless and PR comments

* Make the query log in debug mode

These debug messages can get very big so best not to overdo it unless we actually need to debug a query

* PR Feedback: consolidate upsert directory methods

* PR Feedback: add unit tests / check for directory extractor

* PR Feedback

* Sadly, I can't combine the properties

...because the code generator doesn't handle the defaults for the client

* Truncate the job response if the number of files is too big (1000)